# syntax-checker

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  build.rs  file.py  pyproject.toml  test.css  test.el  test.erb  test.ex  test.go  test.js  test.ml  test.py  test.rdl  test.res  test.sh  test.sol
.github/workflows/: pypi.yml
parsers/html/: grammar.js  package-lock.json  package.json
parsers/html/src/: grammar.json  node-types.json  parser.c
parsers/html/test/corpus/: main.txt
parsers/javascript/: grammar.js
parsers/javascript/src/: grammar.json  parser.c  scanner.c
parsers/ql/: README.md
parsers/tsx/common/: define-grammar.js  scanner.h
parsers/tsx/tsx/src/: grammar.json  node-types.json
parsers/tsx/typescript/src/: grammar.json  node-types.json
parsers/typescript/common/: define-grammar.js
python/syntax_checker/: __init__.pyi
src/: error_detector.rs  lib.rs  main.rs  parser_reg.rs
tests/: test.cs  test.html  test.java  test.json  test.php  test.ql  test.rb  test.toml  test.tsx  test_jsx_support.rs  test_syntax.py
