[package]
name = "multi-parser"
version = "0.1.0"
edition = "2021"

[dependencies]
tree-sitter = "0.22.0"
tree-sitter-rust = "0.20.4"
tree-sitter-typescript = "0.20.3"
tree-sitter-python = "0.20.4"
tree-sitter-c = "0.20.0"
tree-sitter-cpp = "0.20.0"
tree-sitter-javascript = "0.20.1"

[build-dependencies]
cc = "1.0"