[package]
name = "syntax-checker"
version = "0.4.0b1"
edition = "2021"
description = "Multi-language syntax checker using tree-sitter parsers with Python bindings"
homepage = "https://github.com/rusiaaman/syntax-checker"
repository = "https://github.com/rusiaaman/syntax-checker"

[lib]
name = "syntax_checker"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.19.0", features = ["extension-module"] }
tree-sitter = "0.25.5"

[build-dependencies]
cc = "1.0"
